123/MyProject/src/objects/Life_Insurance__c.object
<CustomObject>
    <fields>
        <fullName>Agent_ID__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Agent ID</label>
        <referenceTo>Agent__c</referenceTo>
        <relationshipLabel>Life Insurances</relationshipLabel>
        <relationshipName>Life_Insurances</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>No_of_Terms__c</fullName>
        <label>No. of Terms</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Policy_Holder_Name__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Policy Holder Name</label>
        <referenceTo>Policy_Holder__c</referenceTo>
        <relationshipLabel>Life Insurances</relationshipLabel>
        <relationshipName>Life_Insurances</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Premium_Amount__c</fullName>
        <label>Premium Amount</label>
        <precision>8</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Premium_End_Date__c</fullName>
        <label>Premium End  Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Premium_Start_Date__c</fullName>
        <label>Premium Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Premium_Type__c</fullName>
        <label>Premium Type</label>
        <picklist>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Half Yearly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yearly</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Paid_Amount__c</fullName>
        <label>Total Paid Amount</label>
        <summarizedField>Payment__c.Premium_Amount__c</summarizedField>
        <summaryForeignKey>Payment__c.Life_Insurance_ID__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Life Insurance</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>LIID-{0000}</displayFormat>
        <label>Policy ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Life Insurances</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>